* First pass at background changer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 	<!-- application stylesheet should come in after the one loaded by the framework -->
 	<link href="stylesheets/main.css" media="screen" rel="stylesheet" type="text/css" />
 </head>
-<body>
-	
+
+<body id="body_wallpaper" class="wallpaper">  	
 </body>
+
+
 </html>
