--- a/trunk/index.html
+++ b/trunk/index.html
@@ -12,7 +12,7 @@
 	<link href="stylesheets/main.css" media="screen" rel="stylesheet" type="text/css" />
 </head>
 
-<body id="body_wallpaper" class="wallpaper">  	
+<body id="body_wallpaper" class="wallpaper palm-dark">  	
 </body>
 
 
